fix:left menu z-index

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -35,6 +35,8 @@
 body {
   background-color: var(--bg);
   color: var(--text);
+  position: relative;
+  z-index: 0;
 }
 
 html {
